syntax = "proto3";
package auth;

import "google/protobuf/timestamp.proto";

service AuthenticationService {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
  rpc ResetToken(AuthenticationRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest {
    string username = 1;
    string password = 2;
}

message AuthenticationResponse {
    bool authorized = 1;
    google.protobuf.Timestamp expiredAt = 2;
    string token = 3;
}