syntax = "proto3";
package fileservice;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service FileService {
  rpc GetGoogleDriveFileList(GoogleDriveFileListRequest) returns (GoogleDriveFileListResponse) {
    option (google.api.http) = {
      get: "/v1/gdrive/list"
      };
    };
  rpc GetGoogleStorageFileList(GoogleStorageFileListRequest) returns (GoogleStorageFileListResponse) {
    option (google.api.http) = {
      get: "/v1/gstorage/list"
    };
  };
  rpc GetGoogleStorageFile(GoogleStorageFileRequest) returns (GoogleStorageFileResponse) {
    option (google.api.http) = {
      get: "/v1/gstorage/files/{base64Id}"
    };
  };
}

message File {
    // Common File Object Structure.
    string name = 1;
    int32 size = 2;
    bytes data = 3;
    string path = 4;
    google.protobuf.Timestamp lastModifiedAt = 5;
    google.protobuf.Timestamp createdAt = 6;
    string creator = 7;
    string desc = 8;
}

message GoogleDriveFileListRequest {
    string path = 1;
}

message GoogleDriveFileListResponse {
    repeated File file = 1;
    google.protobuf.Timestamp requestAt = 2;
}

message GoogleStorageFileListRequest {
    string path = 1;
}
message GoogleStorageFileListResponse {
    repeated File file = 1;
    google.protobuf.Timestamp requestAt = 2;
}

message GoogleStorageFileRequest {
  string base64Id = 1;
}
message GoogleStorageFileResponse {
  File file = 1;
}